# pyspatialstats

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  test_import.py  test_parallel.py  test_speed_lr.py
.github/workflows/: build.yml  test.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  methods.rst  pyspatialstats.focal_stats.rst  pyspatialstats.rst
pyspatialstats/: __init__.py  enums.py  focal_function.py  results.py  types.py  utils.py  views.py  windows.py
pyspatialstats/bootstrap/: config.py  linear_regression.pyx  mean.pxd  mean.pyx
pyspatialstats/focal/: __init__.py  correlation.py  focal_core.py  function.py  linear_regression.py  majority.py  max.py  mean.py  min.py  std.py  sum.py  utils.py
pyspatialstats/focal_stats/: __init__.py  correlation.py  focal_correlation.py  focal_statistics.py  linear_regression.py  mean.py
pyspatialstats/grouped/: __init__.py  stats.py  stats_bootstrap.py  utils.py
pyspatialstats/grouped_stats/: __init__.py  grouped_stats.py  grouped_stats_bootstrap.py  utils.py
pyspatialstats/random/: random.pxd  random.pyx
pyspatialstats/results/: stats.py
pyspatialstats/rolling/: rolling_stats.py  rolling_window.py  stats.py  window.py
pyspatialstats/stats/: linear_regression.pxd  linear_regression.pyx
pyspatialstats/strata/: __init__.py  stats.py
pyspatialstats/types/: arrays.py  (+5 more)
tests/: conftest.py  test_bootstrap.py  test_focal_correlations.py  test_focal_function.py  test_random.py  test_rolling.py  test_strata_stats.py  test_views.py  test_windows.py
(+96 files in other folders)
