[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyspatialstats"
version = "0.0.3"
description = ""
authors = [
    { name = "Jasper Roebroek", email = "roebroek.jasper@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"

dependencies = [
    "numpy>=2.2.1",
    "numpydantic",
    "joblib",
    "pandas",
    "scipy"
]
requires-python = ">=3.10"

[project.optional-dependencies]
documentation = [
    'sphinx',
    'sphinx_rtd_theme',
    'numpydoc',
    'jupyter',
    'matplotlib',
    'rasterio'
]
develop = [
    "cython",
    "sphinx",
    "sphinx_rtd_theme",
    "numpydoc",
    "jupyter",
    "matplotlib",
    "pytest",
    "joblib",
    "statsmodels",
    "rasterio"
]
test = [
    "pytest",
    "statsmodels"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
repository = "https://github.com/jasperroebroek/focal-stats"
documentation = "https://focal-stats.readthedocs.io/en/latest/index.html"
